syntax = "proto3";

package calculator;

option go_package = "grpc/calculator/proto";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeRequest {
    int64 number = 1;
}

message PrimeResponse {
    int64 result = 1;
}

message AverageRequest {
    int64 number = 1;
}

message AverageResponse {
    double result = 1;
}

message RunningMaxRequest {
    int64 number = 1;
}

message RunningMaxResponse {
    int64 result = 1;
}

service CalculatorService {
    rpc Add (SumRequest) returns (SumResponse);
    rpc Primes (PrimeRequest) returns (stream PrimeResponse);
    rpc Average (stream AverageRequest) returns (AverageResponse);
    rpc RunningMax (stream RunningMaxRequest) returns (stream RunningMaxResponse);
}